Fixed text alignment in sign up flexbox

--- a/style.css
+++ b/style.css
@@ -85,10 +85,12 @@ button {
 .content {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    flex: 1;
-
     background-color: #ffffff;
+}
+
+.portfolio {
+    text-align: center;
+    margin: 64px;
 }
 
 .container {
@@ -107,6 +109,10 @@ button {
 }
 
 .quote {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    
     background-color: #E5E7EB;
 }
 
@@ -129,6 +135,7 @@ button {
     font-weight: bolder;
     font-size: larger;
 }
+
 .sign-up-box button {  
     border-radius: 4px;
     border: 2px solid #ffffff;
